@@ -1,4 +1,7 @@
 2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/DbManager.py: #1725, ENTER should behave like double click
+
+2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/ViewManager.py: #1559, use CTRL+N/P not ALT+N/P to avoid problems
 
 2008-02-19  Peter Landgren <peter.talken@telia.com>
